fixed icons alignment in preview

--- a/frontend/src/assets/styles/cmps/board/TaskList.scss
+++ b/frontend/src/assets/styles/cmps/board/TaskList.scss
@@ -147,7 +147,7 @@
   align-items: flex-end;
   gap: 3px;
   flex-wrap: wrap;
-  margin-top: 5px;
+  margin-top: 4px;
 }
 
 .members-img {
