--- a/frontend/src/assets/styles/cmps/tasks/_task-due-date.scss
+++ b/frontend/src/assets/styles/cmps/tasks/_task-due-date.scss
@@ -45,7 +45,7 @@
   
     &.overdue {
       background-color: $lightest-red;
-      color: $bold-red;
+      color:  darken($bold-red, 40%);
     }
   
     &.complete {
